[tool.poetry]
name = "cybench"
version = "0.0.0"
description = "A dataset and benchmark for subnational crop yield forecasting, with coverage of major crop growing countries of the world for maize and wheat"
authors = ["AgML <agmlcybench@gmail.com>"]
license = "EUPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.2"
flake8 = "^7.0.0"
tqdm = "^4.66.4"
pandas = "^2.2.2"
datetime = "^5.5"
pytest = "^8.2.2"
pyyaml = "^6.0.1"
comet-ml = "^3.43.1"
seaborn = "^0.13.2"
pymannkendall = "^1.4.3"
rasterio = "^1.4.3"
geopandas = "^1.0.1"
pandocfilters = "^1.5.1"
sphinx-rtd-theme = "^3.0.2"
pathlib = "^1.0.1"
pytest-cov = "^6.0.0"
numpy = "^1.26.4"
torch = "^2.6.0"
torchvision = "^0.21.0"
urllib3 = "^2.3.0"
sphinx = "7.4.7"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
optuna = "^4.5.0"
codecarbon = "^3.2.0"
xgboost = "^2.0"
lightgbm = "^4.6.0"
feature-engine = "^1.8.0"
transformers = ">=4.55.0,<5.0.0"
tabpfn = ">=6.4.0,<7.0.0"
tabicl = ">=2.1.0"
tabdpt = ">=1.2.0"
zenodo-get = "^1.6.1"
shap = "^0.46.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
